# programming

./: Ball.cpp  Ball.hpp  CMakeLists.txt  CMakePresets.json  Color.h  Dust.cpp  Dust.h  Physics.cpp  Physics.h  Point.h  README.md  World.cpp  World.h  allocator.h  containers.h  ip_filter.cpp  ip_filter.h  main.cpp  tests.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: release.yml
lab1/: main.cpp
lab2/: main.cpp
lab3/: main.cpp
lab4/: CMakeLists.txt  main.cpp
lab5/: CMakeLists.txt  division.cpp  division.h  fibonacciSequence.cpp  fibonacciSequence.h  functions.cpp  functions.h  main.cpp
lab6/: CMakeLists.txt  convolution.cpp  convolution.h  main.cpp  matrix.cpp  matrix.h  max_pooling.cpp  max_pooling.h
lab7/: 2d_mesh.cpp  2d_mesh.h  CMakeLists.txt  clean_room.cpp  clean_room.h  equation_solution.cpp  equation_solution.h  main.cpp  test.cpp  test.h  timing_difference.cpp  timing_difference.h
lab7/gtests/: CMakeLists.txt  tests.cpp
lab7/tests/: CMakeLists.txt  test_correct_input.cpp  test_correct_input_with_negative_numbers.cpp  test_incorrect_input.cpp  test_zero_steps.cpp
lab8/: CMakeLists.txt  hash.txt  hash_summ.cpp  hash_summ.h  hash_table.cpp  hash_table.h  main.cpp
